--- a/tasks/elasticsearch-config.yml
+++ b/tasks/elasticsearch-config.yml
@@ -17,7 +17,7 @@
 
 #For directories we also use the {{inventory_hostname}}-{{ es_instance_name }} - this helps if we have a shared SAN.
 
-- set_fact: instance_suffix={{inventory_hostname}}-{{ es_instance_name }}
+- set_fact: instance_suffix={{ es_instance_name }}
 
 - set_fact: pid_dir={{ es_pid_dir }}/{{instance_suffix}}
 
